cleanup in code and add some more validation